# psssodls

./: .gitignore  .gitlab-ci.yml  .gitremotes  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEWS.md  README  README.md  psssodls.eprime  psssodls.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-package.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
psssodls/: __init__.py
src/psssodls/: __init__.py  constraints.py  main.py  psssodls.py
tests/: test.py  test_constraints.py  test_main.py  test_psssodls.py
