[tool.poetry]
name = "psssodls"
version = "0.1.0"
description = "Generate PSSSODLS in Minion format."
authors = ["Matthew Henderson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
